added default username

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactjs-github-profile-finder",
+  "name": "reactjs-github-profiler",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
